# backend/public/swagger.json
@@ -133,12 +133,7 @@
 						"type": "array"
 					}
 				},
-				"required": [
-					"is_success",
-					"error_code",
-					"error_msg",
-					"playlists"
-				],
+				"required": ["is_success", "error_code", "error_msg", "playlists"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -158,12 +153,7 @@
 						"format": "double"
 					}
 				},
-				"required": [
-					"user_uuid",
-					"session_hash",
-					"request_hash",
-					"timestamp"
-				],
+				"required": ["user_uuid", "session_hash", "request_hash", "timestamp"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -186,12 +176,7 @@
 						"type": "array"
 					}
 				},
-				"required": [
-					"is_success",
-					"error_code",
-					"error_msg",
-					"playlists"
-				],
+				"required": ["is_success", "error_code", "error_msg", "playlists"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -211,12 +196,7 @@
 						"format": "double"
 					}
 				},
-				"required": [
-					"user_uuid",
-					"session_hash",
-					"request_hash",
-					"timestamp"
-				],
+				"required": ["user_uuid", "session_hash", "request_hash", "timestamp"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -237,12 +217,7 @@
 						"format": "double"
 					}
 				},
-				"required": [
-					"is_success",
-					"error_code",
-					"error_msg",
-					"playlist_id"
-				],
+				"required": ["is_success", "error_code", "error_msg", "playlist_id"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -299,13 +274,7 @@
 						"format": "double"
 					}
 				},
-				"required": [
-					"user_uuid",
-					"session_hash",
-					"request_hash",
-					"timestamp",
-					"playlist_id"
-				],
+				"required": ["user_uuid", "session_hash", "request_hash", "timestamp", "playlist_id"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -328,12 +297,7 @@
 						"type": "array"
 					}
 				},
-				"required": [
-					"is_success",
-					"error_code",
-					"error_msg",
-					"songs"
-				],
+				"required": ["is_success", "error_code", "error_msg", "songs"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -357,13 +321,7 @@
 						"format": "double"
 					}
 				},
-				"required": [
-					"user_uuid",
-					"session_hash",
-					"request_hash",
-					"timestamp",
-					"playlist_id"
-				],
+				"required": ["user_uuid", "session_hash", "request_hash", "timestamp", "playlist_id"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -424,13 +382,7 @@
 						"format": "double"
 					}
 				},
-				"required": [
-					"user_uuid",
-					"session_hash",
-					"request_hash",
-					"timestamp",
-					"song_id"
-				],
+				"required": ["user_uuid", "session_hash", "request_hash", "timestamp", "song_id"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -451,12 +403,7 @@
 						"format": "double"
 					}
 				},
-				"required": [
-					"is_success",
-					"error_code",
-					"error_msg",
-					"song_id"
-				],
+				"required": ["is_success", "error_code", "error_msg", "song_id"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -519,11 +466,7 @@
 						"type": "string"
 					}
 				},
-				"required": [
-					"is_success",
-					"error_code",
-					"error_msg"
-				],
+				"required": ["is_success", "error_code", "error_msg"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -579,12 +522,7 @@
 						"format": "double"
 					}
 				},
-				"required": [
-					"is_success",
-					"error_code",
-					"error_msg",
-					"song_id"
-				],
+				"required": ["is_success", "error_code", "error_msg", "song_id"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -608,13 +546,7 @@
 						"format": "double"
 					}
 				},
-				"required": [
-					"user_uuid",
-					"session_hash",
-					"request_hash",
-					"timestamp",
-					"song_id"
-				],
+				"required": ["user_uuid", "session_hash", "request_hash", "timestamp", "song_id"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -634,12 +566,7 @@
 						"type": "string"
 					}
 				},
-				"required": [
-					"is_success",
-					"error_code",
-					"error_msg",
-					"user_uuid"
-				],
+				"required": ["is_success", "error_code", "error_msg", "user_uuid"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -659,12 +586,7 @@
 						"type": "string"
 					}
 				},
-				"required": [
-					"request_hash",
-					"timestamp",
-					"username",
-					"password_hash"
-				],
+				"required": ["request_hash", "timestamp", "username", "password_hash"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -687,13 +609,7 @@
 						"type": "string"
 					}
 				},
-				"required": [
-					"is_success",
-					"error_code",
-					"error_msg",
-					"session_hash",
-					"user_uuid"
-				],
+				"required": ["is_success", "error_code", "error_msg", "session_hash", "user_uuid"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -713,12 +629,7 @@
 						"type": "string"
 					}
 				},
-				"required": [
-					"request_hash",
-					"timestamp",
-					"username",
-					"password_hash"
-				],
+				"required": ["request_hash", "timestamp", "username", "password_hash"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -738,12 +649,7 @@
 						"type": "string"
 					}
 				},
-				"required": [
-					"is_success",
-					"error_code",
-					"error_msg",
-					"username"
-				],
+				"required": ["is_success", "error_code", "error_msg", "username"],
 				"type": "object",
 				"additionalProperties": false
 			},
